--- a/Raul_Inc/static/Raul_Inc/CSS/cafe.css
+++ b/Raul_Inc/static/Raul_Inc/CSS/cafe.css
@@ -15,6 +15,19 @@ body{
     scroll-behavior: smooth;
 }
 
+.itemSection{
+    padding:50px 0;
+    margin:0 auto;
+    display: grid;
+    grid-template-rows: auto auto auto auto;
+    place-items: center;
+}
+
+.itemsSection{
+    display: grid;
+    grid-auto-columns: auto auto;
+}
+
 a{
     text-decoration: none;
 }
