--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -148,7 +148,10 @@
         <h1>Login</h1>
         <form method="post">
             {%csrf_token%}
-            {{form.as_p}}
+            <h4>Email Address</h4>
+            {{form.username}}
+            <h4>Password</h4>
+            {{form.password}}
             <button value="Login" name="login" type="submit">Login</button>
         </form>
     </div>
@@ -158,7 +161,13 @@
         <h1>Create an Account</h1>
         <form method="post">
             {%csrf_token%}
-            {{Register_form.as_p}}
+            {{Register_form.errors}}
+            <h4>Email Address</h4>
+            {{Register_form.username}}
+            <h4>Password</h4>
+            {{Register_form.password1}}
+            <h4>Password Confirmation</h4>
+            {{Register_form.password2}}
             <input type="submit" name="register" value="Register" class="button">
             <!-- <div class="error-page">
                 <div class="try-again">Error: Try again?</div>
