--- a/Raul_Inc/static/Raul_Inc/CSS/cafe.css
+++ b/Raul_Inc/static/Raul_Inc/CSS/cafe.css
@@ -108,6 +108,29 @@ h1{
     scroll-behavior: smooth;
 }
 
+.menuGrid{
+    display: grid;
+    grid-template-rows: auto auto auto auto;
+    place-content: center;
+    place-items: center;
+    margin:0 auto;
+    padding:20px 0px;
+    font-family: myFirstFont;
+}
+
+.menuSections{
+    padding:10px 0px;
+    margin:20px auto;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.menuItems{
+    font-size:20px;
+    font-family: myFirstFont;
+}
+
 .menuHead{
     padding:80px 80px 20px 80px;
 }
