--- a/Raul_Inc/templates/Raul_Inc/cafe.html
+++ b/Raul_Inc/templates/Raul_Inc/cafe.html
@@ -55,32 +55,98 @@
             <h1>
                 Menu
             </h1>
-            <p>____Organic Blend_____</p>
-            <p>Hot Coffee ...... 3.00  3.75</p>
-            <p>Decaf Coffee ...... 3.00  3.75</p>
-            <p>Iced Coffee ...... 3.00  3.75</p>
-            <p>Cafe au-lait ...... 3.25  4.00</p>
-            <p> ____EXPRESSO_BLEND_____</p>
-            <p>Espresso ...... 2.75</p>
-            <p>Americano ...... 3.25</p>
-            <p>Macchiato ...... 3.50</p>
-            <p>Cortado ...... 3.50</p>
-            <p>Cappuccino ...... 4.00</p>
-            <p>Latte ...... 4.00</p>
-            <p>Mocha ...... 4.50</p>
-            <p>Dirty Chai Latte ...... 4.50</p>
-            <p> ____Drinks_____</p>
-            <p>Chai Latte ...... 4.25</p>
-            <p>Hot Cocoa ...... 3.00</p>
-            <p>Hot Tea ...... 3.00</p>
-            <p>Bottle Water ...... 2.00</p>
-            <p>Juice...... 2.00</p>
-            <p>Soft Drinks...... 2.50</p>
-            <p> ____Extras_____</p>
-            <p>Flavors:Vanilla, Hazelnut,Carmel ...... 2.50</p>
-            <p>Milks: Oat, Almond, Soy ...... 2.50</p>
-            <p>Espresso Shot ...... 2.50</p>
-
+            <div class ="menuGrid">
+                <div class="menuSections">
+                    <div class ="menuItems">
+                        <p>____Organic Blend_____</p>
+                        <p></p>
+                    </div>
+                    <div class="menuItems">
+                        <p>Hot Coffee ...... 3.00  3.75</p>
+                    </div>
+                    <div class="menuItems">
+                        <p>Decaf Coffee ...... 3.00  3.75</p>
+                    </div>
+                    <div class="menuItems">
+                        <p>Iced Coffee ...... 3.00  3.75</p>
+                    </div>
+                    <div class="menuItems">
+                        <p>Cafe au-lait ...... 3.25  4.00</p>
+                    </div>
+                </div>
+                <div class="menuSections">
+                    
+                    <div class="menuItems">
+                         <p> ____EXPRESSO_BLEND_____</p>
+                    </div>
+                    <div class="menuItems">
+                        <p>Espresso ...... 2.75</p>
+                    </div>
+                    <div class="menuItems">
+                        <p>Americano ...... 3.25</p>
+                    </div>
+                    <div class="menuItems">
+                        <p>Macchiato ...... 3.50</p>
+                    </div>
+                    <div class="menuItems">
+                        <p>Cortado ...... 3.50</p>
+                    </div>
+                    <div class="menuItems">
+                        <p>Cappuccino ...... 4.00</p>
+                    </div>
+                    <div class="menuItems">
+                        <p>Latte ...... 4.00</p>
+                    </div>
+                    <div class="menuItems">
+                        <p>Mocha ...... 4.50</p>
+                    </div>
+                    <div class="menuItems">
+                        <p>Dirty Chai Latte ...... 4.50</p>
+                    </div>
+                    
+                </div>
+                <div class="menuSections">
+                    
+                    <div class="menuItems">
+                        <p> ____Drinks_____</p>
+                    </div>
+                    <div class="menuItems">
+                        <p>Chai Latte ...... 4.25</p>
+                    </div>
+                    <div class="menuItems">
+                        <p>Hot Cocoa ...... 3.00</p>
+                    </div>
+                    <div class="menuItems">
+                        <p>Hot Tea ...... 3.00</p>
+                    </div>
+                    <div class="menuItems">
+                        <p>Bottle Water ...... 2.00</p>
+                    </div>
+                    <div class="menuItems">
+                        <p>Juice...... 2.00</p>
+                    </div>
+                    <div class="menuItems">
+                        <p>Soft Drinks...... 2.50</p>
+                    </div>
+                    
+                </div>
+                <div class="menuSections">
+                    
+                    <div class="menuItems">
+                        <p> ____Extras_____</p>
+                    </div>
+                    <div class="menuItems">
+                        <p>Flavors:Vanilla, Hazelnut,Carmel ...... 2.50</p>
+                    </div>
+                    <div class="menuItems">
+                        <p>Milks: Oat, Almond, Soy ...... 2.50</p>
+                    </div>
+                    <div class="menuItems">
+                        <p>Espresso Shot ...... 2.50</p>
+                    </div>
+                    
+                </div>
+            </div>           
         </div>
     </div>
     <div class="sections1" id = "parallax">
