home page nav bar clicks

--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -154,10 +154,10 @@
                 <p class="dropDownButton"><a  href="{% url 'sec-view' 'Decorative Accessories' %}">Decorative Accessories</a></p>
                 <div class="dropDownContent">
                     <div class="dropDownContentLinks">
-                        <a>Candlelight</a>
-                        <a>Decorative Objects</a>
-                        <a>Urns</a>
-                        <a>Vases & Cachepots</a>
+                        <a href="{% url 'cat-view' 'Candlelight' %}">Candlelight</a>
+                        <a href="{% url 'cat-view' 'Decorative Objects' %}">Decorative Objects</a>
+                        <a  href="{% url 'cat-view' 'Urns' %}">Urns</a>
+                        <a  href="{% url 'cat-view' 'Vases and Cachepots' %}">Vases & Cachepots</a>
                     </div>
                 </div>
                 
@@ -167,8 +167,8 @@
                 <p class="dropDownButton"><a  href="{% url 'sec-view' 'Tabletop' %}">Tabletop</a></p>
                 <div class="dropDownContent">
                     <div class="dropDownContentLinks">
-                        <a>Dinnerware</a>
-                        <a>Pitchers</a>
+                        <a href="{% url 'cat-view' 'Dinnerware' %}">Dinnerware</a>
+                        <a  href="{% url 'cat-view' 'Pitchers' %}">Pitchers</a>
                     </div>
 
                 </div>
@@ -178,10 +178,10 @@
                 <p class="dropDownButton"><a  href="{% url 'sec-view' 'Furniture' %}">Furniture</a></p>
                     <div class="dropDownContent">
                         <div class="dropDownContentLinks">
-                            <a>Chairs</a>
-                            <a>End Tables</a>
-                            <a>Ottoman & Benches</a>
-                            <a>Outdoor Furniture</a>
+                            <a  href="{% url 'cat-view' 'Chairs' %}">Chairs</a>
+                            <a  href="{% url 'cat-view' 'End Tables' %}">End Tables</a>
+                            <a  href="{% url 'cat-view' 'Ottoman & Benches' %}">Ottoman & Benches</a>
+                            <a  href="{% url 'cat-view' 'Outdoor Furniture' %}">Outdoor Furniture</a>
                         </div>
                     </div>
             </div>
@@ -195,8 +195,8 @@
                 <p class="dropDownButton"><a  href="{% url 'sec-view' 'Wall Art' %}">Wall Art</a></p>
                 <div class="dropDownContent">
                     <div class="dropDownContentLinks">
-                        <a>ArtWork</a>
-                        <a>Mirrors</a>
+                        <a  href="{% url 'cat-view' 'Artwork' %}">ArtWork</a>
+                        <a  href="{% url 'cat-view' 'Mirrors' %}">Mirrors</a>
                     </div>
                 </div>
             </div>
@@ -211,12 +211,12 @@
                 <p class="dropDownButton" ><a  href="{% url 'sec-view' 'Sale' %}">Sale</a></p>
                 <div class="dropDownContent">
                     <div class="dropDownContentLinks">
-                        <a>All Sale Items</a>
-                        <a>Bowls</a>
-                        <a>Candlelight</a>
-                        <a>Glasswear</a>
-                        <a>Vases and Cachepots</a>
-                        <a>Votives</a>
+                        <a  href="{% url 'cat-view' 'All Sale Items' %}">All Sale Items</a>
+                        <a  href="{% url 'cat-view' 'Bowls' %}">Bowls</a>
+                        <a  href="{% url 'cat-view' 'Candlelight' %}">Candlelight</a>
+                        <a  href="{% url 'cat-view' 'Glasswear' %}">Glasswear</a>
+                        <a href="{% url 'cat-view' 'Vases & Cachepots' %}">Vases and Cachepots</a>
+                        <a href="{% url 'cat-view' 'Votives' %}">Votives</a>
                         <a>f</a>
                     </div>
                 </div>
