--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -222,7 +222,8 @@
                 </div>
             </div>
             
-            <p id="categoryP"> Venue Bookings</p>
+            <p class="dropDownButton"><a href="{% url 'venue' %}">Venue Bookings</a></p>
+
 
         </div>
     </div>
