--- a/users/templates/users/venue.html
+++ b/users/templates/users/venue.html
@@ -8,7 +8,31 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
+<style>
+    h1{
+        position: absolute;
+        left: 120px;
+        top: 150px;
+
+    }
+
+    p{
+        position: absolute;
+        left: 120px;
+        top: 490px;
+        background-color: #cfbb63;
+        padding:16px 32px;
+        color:#333333;
+        outline: none;
+        border: none;
+        font-family: myFirstFont;
+        font-size:20px;
+    }
+</style>
 <body>
+
+    <h1> Please click the button below to send us an e-mail to reserve either raul retail or cafe-floor  Please make sure to include dates, times, and type of event. We can't wait to speak with you! </h1>
+    <p><a href="mailto:dberhan@buffalo.edu">Send email</a></p>
 
 </body>
 </html>
