--- a/Raul/static/Raul/CSS/main.css
+++ b/Raul/static/Raul/CSS/main.css
@@ -635,7 +635,7 @@ nav li {
     }
 
     .section .firstSection{
-        background:url('Images/bannerSecond.jpg');
+        background:url('Images/Collection1.jpg');
         width:100%;
         height: 100%;
         background-position: center bottom;
@@ -643,7 +643,7 @@ nav li {
     }
 
     .section .secondSection{
-        background: url('Images/bannerThird.jpg');
+        background: url('Images/Collection2.jpg');
         width:100%;
         background-position: center;
         height: 100%;
@@ -1002,7 +1002,7 @@ nav li {
     }
 
     .section .secondSection{
-        background: url('Images/bannerThird.jpg');
+        background: url('Images/Collection2.jpg');
         width:100%;
         background-position: center;
         height: 100%;
@@ -1369,7 +1369,7 @@ nav li {
     }
 
     .section .secondSection{
-        background: url('Images/bannerThird.jpg');
+        background: url('Images/Collection2.jpg');
         width:100%;
         background-position: center;
         height: 100%;
@@ -1802,7 +1802,7 @@ nav li {
     }
 
     .section .secondSection{
-        background: url('Images/bannerThird.jpg');
+        background: url('Images/Collection2.jpg');
         width:100%;
         background-position: center;
         height: 100%;
@@ -2835,7 +2835,7 @@ nav li {
     }
 
     .section .firstSection{
-        background:url('Images/bannerSecond.jpg');
+        background:url('Images/Collection1.jpg');
         width:100%;
         height: 100%;
         background-position: center bottom;
@@ -2843,7 +2843,7 @@ nav li {
     }
 
     .section .secondSection{
-        background: url('Images/bannerThird.jpg');
+        background: url('Images/Collection2.jpg');
         width:100%;
         background-position: center;
         height: 100%;
@@ -3727,7 +3727,7 @@ nav li {
     } */
 
     .bannerSecond{
-        background-image: url('Images/bannerThird.jpg');
+        background-image: url('Images/Layout.jpg');
         height:100vh;
         width: 100%;
         position: relative;
@@ -4282,7 +4282,7 @@ nav li {
     }
 
     .section .firstSection{
-        background:url('Images/V1D_2.jpg');
+        background:url('Images/Collection1.jpg');
         width:100%;
         height: 100%;
         background-position: center bottom;
@@ -4290,7 +4290,7 @@ nav li {
     }
 
     .section .secondSection{
-        background: url('Images/V1D_2.jpg');
+        background: url('Images/Collection2.jpg');
         width:100%;
         background-position: center;
         height: 100%;
@@ -5058,7 +5058,7 @@ nav li {
 
     
     .bannerSecond{
-        background-image: url('Images/bannerThird.jpg');
+        background-image: url('Images/Layout.jpg');
         height:100vh;
         width: 100%;
         position: relative;
@@ -5612,7 +5612,7 @@ nav li {
     }
 
     .section .firstSection{
-        background:url('Images/V1D_2.jpg');
+        background:url('Images/Collection1.jpg');
         width:100%;
         height: 100%;
         background-position: center bottom;
@@ -5620,7 +5620,7 @@ nav li {
     }
 
     .section .secondSection{
-        background: url('Images/V2D.jpg');
+        background: url('Images/Collection2.jpg');
         width:100%;
         background-position: center;
         height: 100%;
